Wired stockiest and placing order by a networker

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,12 @@
   height: 40vmin;
   pointer-events: none;
 }
-
+.pdght {
+  position: absolute!important;
+    top: 10%!important;
+    right: 0!important;
+    z-index: 999;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
